# Gen-Tau-Client

./: .clang-format  .gitignore  .qmlls.ini  CMakeLists.txt  README.md
app/: CMakeLists.txt  GTCommViewModel.cpp  main.cpp
app/inc/: GTCommViewModel.hpp
app/proto/: message.proto  topics.proto
app/qml/: Main.qml
cmake/: TCompileOptions.cmake  TDependencies.cmake  TExtraInfo.cmake  TProjOptions.cmake  TProjSettings.cmake  TRegister.cmake
core/: CMakeLists.txt
core/comm/: CMakeLists.txt  TMqttClient.cpp
core/comm/inc/comm/: TMqttClient.hpp
core/conf/: CMakeLists.txt  clangd-anchor.cpp  version.hpp.in
core/img_trans/: CMakeLists.txt  TBytesVidRender.cpp  TGstUtils.cpp  TReassembly.cpp  TRecv.cpp  TVidRender.cpp  TVidUtils.cpp
core/img_trans/inc/img_trans/: TImgTrans.hpp
core/img_trans/inc/img_trans/net/: TReassembly.hpp  TRecv.hpp
core/img_trans/inc/img_trans/vid_render/: TBytesVidRender.hpp  TFramePool.hpp  TGstUtils.hpp  TSimpleVidRender.hpp  TVidRender.hpp  TVidUtils.hpp
core/utils/: CMakeLists.txt  TLog.cpp  TScheduler.cpp
core/utils/inc/utils/: TDeduction.hpp  TLog.hpp  TLogical.hpp  TScheduler.hpp  TSignal.hpp  TTypeRedef.hpp  TUtils.hpp
core/vid_render/: CMakeLists.txt  TVidRender.cpp
core/vid_render/inc/vid_render/: TVidRender.hpp
res/: core_struct.pu  raw_sintel_720p_stream.h265
res/doc/: about_gstreamer_floating_object.md  cpp_attributes.md  universal_ref_and_perfect_forward.md
scripts/: asan.env.template  cmake_conf.sh  cmake_conf.zsh  lsan.supp
src/: .qmlls.ini  CMakeLists.txt  main.cpp
src/app/qml/: Main.qml
src/conf/: CMakeLists.txt  clangd-anchor.cpp  version.hpp.in
src/conf/inc/conf/: version.hpp
src/utils/: CMakeLists.txt  TLog.cpp
src/utils/inc/utils/: TLog.hpp
src/vid_render/: CMakeLists.txt  TVidRender.cpp
src/vid_render/inc/vid_render/: TVidRender.hpp
tests/: CMakeLists.txt
tests/cmake_mod_test/: CMakeLists.txt
tests/comm_test/: CMakeLists.txt  mqtt-test-pub.cpp  mqtt-test-sub.cpp  mqtt-test.cpp  test.pb.cc
tests/comm_test/inc/test_proto/: test.pb.h
tests/comm_test/proto/: test.proto
tests/img_trans_net/: CMakeLists.txt  bind-test.cpp  frame-data-test.cpp  recv-test.cpp
tests/log_test/: CMakeLists.txt  log-test.cpp
tests/render/: .qmlls.ini  CMakeLists.txt  gst-rend-test.cpp  rend-appsrc.cpp  rend-filesrc.cpp  rend-net.cpp  rend-status-change.cpp
tests/render/qml/: RendTest.qml  StatusTest.qml
tests/signal_test/: CMakeLists.txt  signal-test.cpp
tests/test_gtest/: CMakeLists.txt  test-gtest.cpp
tests/tvid_mem_prof/: CMakeLists.txt  tvid-mem-prof.cpp
tests/util_test/: CMakeLists.txt  scheduler-test.cpp  util-test.cpp
tests/with_head/: CMakeLists.txt  test-head.cpp
tests/with_head/inc/: test-head.hpp
